# npify

./: .gitignore  pyproject.toml  ruff.toml
src/npify/: __init__.py  __main__.py
tests/: test_php.py  test_simple_ast.py
